@@ -1,0 +1,3 @@
+NoSuchTest.t ..
+1..1
+ok 1 yippeee
